Prepared git ignore and made a test change.

--- a/test.sh.example
+++ b/test.sh.example
@@ -1,5 +1,5 @@
 #!/bin/bash
-
+#Test comment 2
 #For testing this gem:
 export AWS_ACCESS_KEY=ADDYOURKEYHERE
 export AWS_SECRET_KEY=ADDYOURSECRETKEYHERE
